--- a/numpy_intro.ipynb
+++ b/numpy_intro.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<div style=\"\n",
-    "    background-image: url('https://miro.medium.com/v2/resize:fit:1000/1*RY96IbeNH41iTggMlfjI4A.jpeg');\n",
+    "    background-image: url('https://wallpapers.com/images/featured/cat-g9rdx9uk2425fip2.jpg');\n",
     "    background-size: cover;\n",
     "    background-position: center;\n",
     "    height: 380px;\n",
