--- a/python_101.ipynb
+++ b/python_101.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<div style=\"\n",
-    "    background-image: url('https://img.freepik.com/free-photo/digital-art-snake-illustration_23-2151674350.jpg?t=st=1739106492~exp=1739110092~hmac=67736a7b58bb06face6ead96b5a8afab29373a81c2e88c162063b438892cbf2f&w=996');\n",
+    "    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTie-INPv04q46Srt0qaOr70OiVXDdmjzkHeg&s');\n",
     "    background-size: cover;\n",
     "    background-position: center;\n",
     "    height: 380px;\n",
